# femtc

./: .gitignore  .gitmodules  CMakeLists.txt  batch_gemm.cpp  bench_mass.cpp  bench_stiffness.cpp  gemm_libxsmm.cpp  gemm_order.cpp  load.sh  main.cpp  permute.cpp  readme.md  run.sh  tensor.hpp  test_gemm.cpp  test_micro.cpp  tm.hpp
.github/workflows/: cpp.yml
src/: linalg.hpp  mass.hpp  permutations.hpp  stiffness.hpp  tensor.hpp  tm.hpp  tmm.hpp  utils.hpp
tests/: CMakeLists.txt  test_gemm.cpp  test_micro.cpp
